#All exported headers
nobase_include_HEADERS= \
    opx/nas_acl_filter.h \
    opx/nas_acl_entry.h \
    opx/nas_acl_log.h \
    opx/nas_acl_common.h \
    opx/nas_acl_switch_list.h \
    opx/nas_acl_cps.h \
    opx/nas_acl_cps_key.h \
    opx/nas_acl_action.h \
    opx/nas_acl_utl.h \
    opx/nas_acl_table.h \
    opx/nas_acl_counter.h \
    opx/nas_acl_switch.h \
    opx/nas_acl_init.h  \
    opx/nas_acl_range.h
