# Copyright (c) 2018 Dell Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# THIS CODE IS PROVIDED ON AN  *AS IS* BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT
# LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS
# FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
#
# See the Apache Version 2.0 License for specific language governing
# permissions and limitations under the License.
#
#All exported headers
nobase_include_HEADERS= \
    opx/nas_acl_filter.h \
    opx/nas_acl_entry.h \
    opx/nas_acl_log.h \
    opx/nas_acl_common.h \
    opx/nas_acl_switch_list.h \
    opx/nas_acl_cps.h \
    opx/nas_acl_cps_key.h \
    opx/nas_acl_action.h \
    opx/nas_acl_utl.h \
    opx/nas_acl_table.h \
    opx/nas_acl_counter.h \
    opx/nas_acl_switch.h \
    opx/nas_acl_init.h  \
    opx/nas_acl_range.h
